--- a/src/index.html
+++ b/src/index.html
@@ -2,43 +2,45 @@
 <html lang="en">
   <head>
 
-    <!-- Title and Description -->
-    <title>Decarium</title>
-    <meta name="description" content="Entrepreneur, designer, developer, constant student of life. Always looking to teach and to be taught.">
-
+	  <title>Decarium</title>
     <!-- General Meta stuff -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- Canoical Link for Website -->
-    <link rel="canonical" href="https://seankilgarriff.com" >
+    <meta name="description" content="Crypto Currency Conglomerate Company">
+    <link rel="canonical" href="https://decarium.com">
 
-    <!-- Schema.org markup for Google+ -->
-    <meta itemprop="name" content="Sean Kilgarriff">
-    <meta itemprop="description" content="Sean Kilgarriff: Entrepreneur, designer, developer, constant student of life. Always looking to teach and to be taught.">
-    <meta itemprop="image" content="https://www.seankilgarriff.com/images/SKlogo.png">
 
-    <!-- Twitter Card data -->
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:site" content="@seankilgarriff">
-    <meta name="twitter:title" content="Sean Kilgarriff">
-    <meta name="twitter:description" content="Sean Kilgarriff: Entrepreneur, designer, developer, constant student of life. Always looking to teach and to be taught.">
-    <meta name="twitter:creator" content="@seankilgarriff">
-    <meta name="twitter:image:src" content="https://www.seankilgarriff.com/images/SKlogo.png">
+    <!-- COMMON TAGS -->
+	<meta charset="utf-8">
+	<title>Decarium</title>
 
-    <!-- Open Graph data -->
-    <meta property="og:title" content="Sean Kilgarriff">
-    <meta property="og:type" content="article">
-    <meta property="og:url" content="https://www.seankilgarriff.com">
-    <meta property="og:image" content="https://www.seankilgarriff.com/images/SKlogo.png">
-    <meta property="og:description" content="Sean Kilgarriff: Entrepreneur, designer, developer, constant student of life. Always looking to teach and to be taught.">
-    <meta property="og:site_name" content="Sean Kilgarriff">
+	<!-- Search Engine -->
+	<meta name="description" content="Crypto Currency Conglomerate Company">
+	<meta name="image" content="https://decarium.com/decarium.png">
 
+	<!-- Schema.org for Google -->
+	<meta itemprop="name" content="Decarium">
+	<meta itemprop="description" content="Crypto Currency Conglomerate Company">
+	<meta itemprop="image" content="https://decarium.com/decarium.png">
+
+	<!-- Open Graph general (Facebook, Pinterest & Google+) -->
+	<meta name="og:title" content="Decarium">
+	<meta name="og:description" content="Crypto Currency Conglomerate Company">
+	<meta name="og:image" content="https://decarium.com/decarium.png">
+	<meta name="og:url" content="https://decarium.com">
+	<meta name="og:site_name" content="Decarium">
+	<meta name="og:locale" content="en_US">
+	<meta name="og:type" content="website">
 
     <!-- Favicon Icons -->
-    <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
-    <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
-    <link rel="shortcut icon" href="/favicon.ico">
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=2">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?v=2">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?v=2">
+<link rel="manifest" href="/manifest.json?v=2">
+<link rel="mask-icon" href="/safari-pinned-tab.svg?v=2" color="#323232">
+<meta name="theme-color" content="#ffffff">
+
 
   </head>
   <body>
